--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "symfony/console": "~2.1",
-        "symfony/filesystem": "~2.4"
+        "symfony/filesystem": "~2.4",
+        "symfony/dependency-injection": "~2.4"
     },
     "require-dev": {
         "behat/behat": "3.0.*@dev",
