--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,5 @@
 {
+    "name": "mariposa/mariposa",
     "require": {
         "symfony/console": "~2.1",
         "symfony/filesystem": "~2.4",
@@ -14,5 +15,7 @@
     },
     "autoload": {
         "psr-0": {"Mariposa\\": "src/"}
-    }
+    },
+
+    "bin": ["bin/mariposa"]
 }
