--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "mariposa/mariposa",
+    "description": "Static site text builder",
     "type": "project",
     "require": {
         "symfony/console": "~2.1",
@@ -17,6 +18,6 @@
     "autoload": {
         "psr-0": {"Mariposa\\": "src/"}
     },
-
+    "target-dir": "Mariposa",
     "bin": ["bin/mariposa"]
 }
