--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "type": "project",
     "require": {
         "symfony/console": "~2.1",
+        "symfony/config": "~2.4",
         "symfony/filesystem": "~2.4",
         "symfony/dependency-injection": "~2.4",
         "symfony/finder": "~2.4"
